syntax = "proto3";
package bze.tradebin.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/bze-alphateam/bze/x/tradebin/types";

message OrderCreateMessageEvent {
  string creator = 1;
  string market_id = 2;
  string order_type = 3;
  string amount = 4;
  string price = 5;
}

message OrderCancelMessageEvent {
  string creator = 1;
  string marketId = 2;
  string orderId = 3;
  string order_type = 4;
}

message MarketCreatedEvent {
  string creator = 1;
  string base = 2;
  string quote = 3;
}

message OrderExecutedEvent {
  string id = 1;
  string market_id = 2;
  string order_type = 3;
  string amount = 4;
  string price = 5;
}

message OrderCanceledEvent {
  string id = 1;
  string market_id = 2;
  string order_type = 3;
  string amount = 4;
  string price = 5;
}

message OrderSavedEvent {
  string id = 1;
  string market_id = 2;
  string order_type = 3;
  string amount = 4;
  string price = 5;
}
